# mlops2025_christa_nicolas

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: sagemaker.yaml  train.yaml
output/: 20260104_predictions.csv
outputs/metrics/: training_metrics.json
outputs/models/: best_model.pkl  random_forest.pkl
scripts/: batch_inference.py  feature_engineering.py  preprocess.py  train.py
src/mlops2025_christa_nicolas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mlproject/features/: __init__.py  engineer.py
src/mlproject/inference/: __init__.py  predictor.py
src/mlproject/pipelines/: run_batch_inference_pipeline.py  run_training_pipeline.py
src/mlproject/preprocess/: __init__.py  cleaner.py
src/mlproject/train/: __init__.py  trainer.py
src/mlproject/utils/: __init__.py  config.py  loader.py  logging_config.py
tests/: test_features.py  test_preprocess.py
