[project]
name = "mlops2025-christa-nicolas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sagemaker>=3.3.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
train = "mlproject.pipelines.run_training_pipeline:main"
inference = "mlproject.pipelines.run_batch_inference_pipeline:main"